Added content and favicons
Added name, links, bio, and bio photo. Uploaded and linked to new favicons.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DIY Landing Page</title>
+    <title>Anna Pearsall</title>
 
     <!-- Favicons -->
     <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
@@ -22,16 +22,18 @@
 </head>
 <body>
 
-    <h1 contenteditable>Your Name</h1>
+    <h1>Anna Pearsall</h1>
 
-    <img src="me.jpg" alt="This is NOT Me">
+    <img src="me.jpg" alt="Anna Pearsall">
 
-    <p contenteditable>Brief biography about yourself to explain why you're awesome.</p>
+    <h2>Hello!</h2>
+
+    <p>I am a freelance writer and web designer based out of Eastern Washington. I recently graduated from Eastern Washington University with a Bachelor of Arts degree in Technical Communication and Creative Writing. I aim to create clean, simple, visually-appealing content with the user in mind.</p>
 
     <nav>
-        <a href="#">Link A</a>
-        <a href="#">Link B</a>
-        <a href="#">Link C</a>
+        <a href="https://annapearsall.com">Website</a>
+        <a href="https://github.com/annapearsall">GitHub</a>
+        <a href="https://codepen.io/apearsall">CodePen</a>
     </nav>
     
 </body>
