--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 </head>
 <body>
-
+<main>
     <h1>Anna Pearsall</h1>
 
     <img src="me.jpg" alt="Anna Pearsall">
@@ -35,6 +35,6 @@
         <a href="https://github.com/annapearsall">GitHub</a>
         <a href="https://codepen.io/apearsall">CodePen</a>
     </nav>
-    
+    </main>
 </body>
 </html>
