--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     <p>I am a freelance writer and web designer based out of Eastern Washington. I recently graduated from Eastern Washington University with a Bachelor of Arts degree in Technical Communication and Creative Writing. I aim to create clean, simple, visually-appealing content with the user in mind.</p>
 
     <nav>
-        <a href="https://annapearsall.com">Website</a>
-        <a href="https://github.com/annapearsall">GitHub</a>
-        <a href="https://codepen.io/apearsall">CodePen</a>
+        <a href="https://annapearsall.com" target="_blank">Website</a>
+        <a href="https://github.com/annapearsall" target="_blank">GitHub</a>
+        <a href="https://codepen.io/apearsall" target="_blank">CodePen</a>
     </nav>
     </main>
 </body>
