--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <h2>Hello!</h2>
 
-    <p>I am a freelance writer and web designer based out of Eastern Washington. I recently graduated from Eastern Washington University with a Bachelor of Arts degree in Technical Communication and Creative Writing. I aim to create clean, simple, visually-appealing content with the user in mind.</p>
+    <p>I am a freelance writer and web designer based out of Eastern Washington. I aim to create clean, simple, visually-appealing content with the user in mind.</p>
 
     <nav>
         <a href="https://annapearsall.com" target="_blank">Website</a>
