added background gradient

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     <p>I am a freelance writer and web designer based out of Eastern Washington. I aim to create clean, simple, visually-appealing content with the user in mind.</p>
 
     <nav>
-        <a href="https://annapearsall.com" target="_blank">Website</a>
-        <a href="https://github.com/annapearsall" target="_blank">GitHub</a>
-        <a href="https://codepen.io/apearsall" target="_blank">CodePen</a>
+        <div><a href="https://annapearsall.com" target="_blank">Website</a></div>
+        <div><a href="https://github.com/annapearsall" target="_blank">GitHub</a></div>
+        <div><a href="https://codepen.io/apearsall" target="_blank">CodePen</a></div>
     </nav>
     </main>
 </body>
