--- a/index.html
+++ b/index.html
@@ -15,26 +15,27 @@
     <!-- Normalize CSS Base -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
     <!-- My Styles -->
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <!-- My Scripts -->
     <script src="js/scripts.js"></script>
 
 </head>
 <body>
-<main>
-    <h1>Anna Pearsall</h1>
+
+    
 
     <img src="me.jpg" alt="Anna Pearsall">
+    <h1>Anna Pearsall</h1>
 
-    <h2>Hello!</h2>
+    <h2>Hello there!</h2>
 
     <p>I am a freelance writer and web designer based out of Eastern Washington. I aim to create clean, simple, visually-appealing content with the user in mind.</p>
 
     <nav>
-        <div><a href="https://annapearsall.com" target="_blank">Website</a></div>
-        <div><a href="https://github.com/annapearsall" target="_blank">GitHub</a></div>
-        <div><a href="https://codepen.io/apearsall" target="_blank">CodePen</a></div>
+        <a href="https://annapearsall.com" target="_blank"><div>Website</div></a>
+        <a href="https://github.com/annapearsall" target="_blank"><div>GitHub</div></a>
+        <a href="https://codepen.io/apearsall" target="_blank"><div>CodePen</div></a>
     </nav>
-    </main>
+
 </body>
 </html>
